# shareable-spi

./: .gitignore  Cargo.toml
examples/atsamd51/: Cargo.toml  memory.x
examples/atsamd51/.cargo/: config
examples/atsamd51/src/: lib.rs  main.rs  pins.rs  spi.rs
src/: lib.rs  reconfigurable_mode.rs  shareable_spi.rs  shareable_spi_with_conf.rs  spi_lock.rs
