[package]
name = "shareable-spi"
version = "0.0.0"
authors = ["Michael van Niekerk <mvniekerk@chazaqdev.com>"]
description = "Naive sharing of an SPI between peripherals"
keywords = ["no-std", "spi", "embedded-hal"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/mvniekerk/shareable-spi"
readme = "README.md"
documentation = "https://atsamd-rs.github.io/atsamd/atsamd21g18a/atsamd21_hal/"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "~0.2.3"

