[package]
name = "atsamd51-shareable-spi-example"
version = "0.0.0"
authors = ["Michael van Niekerk <mvniekerk@chazaqdev.com>"]
description = "Naive sharing of an SPI between peripherals"
keywords = ["no-std", "spi", "embedded-hal"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/mvniekerk/shareable-spi"
readme = "README.md"
documentation = "https://atsamd-rs.github.io/atsamd/atsamd21g18a/atsamd21_hal/"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "~0.2.3"
shareable-spi = { path = "../../" }
cortex-m = "~0.6"

[dependencies.atsamd-hal]
version = "~0.8"
default-features = false

[dependencies.cortex-m-rt]
version = "~0.6.12"
optional = true

[dependencies.adxl313]
git = "https://github.com/mvniekerk/adxl313-rs"

[dependencies.microchip-tc72r-rs]
git = "https://github.com/mvniekerk/microchip-tc72-rs"

[dependencies.sx127x_lora]
git = "https://github.com/mvniekerk/sx127x_lora"

[dependencies.spi-memory]
git = "https://github.com/mvniekerk/spi-memory"
features = ["25lc"]

[dev-dependencies]
panic-halt = "~0.2"
panic-semihosting = "~0.5"
panic_rtt = "~0.2"
cortex-m-rtic = "~0.5"

[dev-dependencies.ws2812-timer-delay]
version = "~0.3"

[features]
# ask the HAL to enable atsamd51j19a support
default = ["rt", "atsamd-hal/samd51j19a", "atsamd-hal/samd51"]
rt = ["cortex-m-rt", "atsamd-hal/samd51j19a-rt"]
use_semihosting = []

[profile.dev]
incremental = false
codegen-units = 1
debug = true
lto = true

[profile.release]
debug = true
lto = true
opt-level = "s"